Sun Jul 13 21:07:17 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, eval.c, export.c, file.c, gnubg.c, gnubgmodule.c,
	gtkprefs.c, html.c, import.c, latex.c, makebearoff.c, makehyper.c,
	makeweights.c, relational.c, rollout.c, sgf.c, text.c,
	board3d/matrix.c, board3d/misc3d.c: replace fopen with g_fopen to
	avoid problems with special characters in filenames

Sat Jul 12 09:10:43 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, renderprefs.c, renderprefs.h: fix places where g_strdup
	wasn't followed by g_free

Fri Jul 11 22:54:46 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, dice.c, eval.c, format.c, gnubg.c, show.c, renderprefs.c:
	fix some printf format related compiler warnings

Fri Jul 11 22:48:59 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix type of board in log_game_start

Fri Jul 11 11:23:02 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: move log_name out of globals

Mon Jul  7 22:42:20 CEST 2008 Petr Kadlec <mormegil@centrum.cz>

	* eval.c, gnubg.c, gtkgame.c, matchequity.c, render.c, renderprefs.c
	show.c, sound.c: minor fixes for MSVC compiler happinnes (mainly adding
	"float" suffix to decimal number literals etc.)

Mon Jul  7 12:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* rollout.c: Give each thread separate random number context to
	try and get results the same as single-threaded rollouts.

Mon Jul  7 00:22:35 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix multithreaded dice generation and logfiles

Mon Jul  7 00:20:52 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: print prompt and answer for automatic questions

Sun Jul  6 00:00:22 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* format.c: correct minor error introduced by translational changes

Wed Jul  2 00:01:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkfile.c, gtkoptions.c,
	import.c, play.c, set.c, sgf.c, show.c: fix minor problems with the